--- a/css/great.css
+++ b/css/great.css
@@ -527,6 +527,9 @@ footer .footer-developed {
   .landing {
     height: 40vh;
   }
+  header {
+    height: 40vh;
+  }
   .nav-links {
     display: none;
     flex-direction: column;
