--- a/css/Tour.css
+++ b/css/Tour.css
@@ -59,7 +59,7 @@ ul {
 /* Variables */
 :root {
   --main-color: #ffd700;
-  --transparent-color: rgba(255, 217, 0, 0.075);
+  --transparent-color: rgba(0, 0, 0, 0.842);
   --section-padding: 100px;
   --text-shadow: 5px 5px 5px rgba(255, 215, 0, 0.7);
 }
@@ -93,24 +93,46 @@ header {
 }
 
 /* Styling links */
+/* Menu Links */
+.nav-links {
+  display: flex;
+  gap: 10px;
+}
+.nav-links > li:not(.egypt-text) {
+  position: relative;
+  padding-right: 20px;
+}
+
+.nav-links > li:not(.egypt-text)::after {
+  content: "▼";
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 12px;
+  color: var(--main-color);
+  pointer-events: none;
+  transition: 0.3s;
+}
+
+.nav-links > li:not(.egypt-text):hover::after {
+  transform: translateY(-50%) rotate(180deg);
+}
+
 .nav-links a {
   text-decoration: none;
-  color: gold;
-  font-weight: bold;
-  font-size: 18px;
-  padding: 10px 15px;
-  border-radius: 5px;
-  transition: 0.3s ease-in-out;
+  color: var(--main-color);
+  font-weight: 500;
+  font-size: 17px;
+  padding: 8px 12px;
+  border-radius: 8px;
+  transition: 0.3s;
 }
 
 .nav-links a:hover {
+  background: rgba(255, 215, 0, 0.2);
   color: white;
-  background: rgba(255, 215, 0, 0.3);
-  text-shadow: 0 0 5px gold;
-}
-
-.nav-links a:hover .dropdown-menu.active {
-  display: block !important;
+  text-shadow: var(--text-shadow);
 }
 
 /* ========== Dropdown Menu ========== */
@@ -124,7 +146,7 @@ header {
   top: 100%;
   left: 50%;
   transform: translateX(-50%);
-  background: rgba(0, 0, 0, 0.849);
+  background: var(--transparent-color);
   list-style: none;
   padding: 10px;
   margin: 0;
@@ -158,7 +180,9 @@ header {
 }
 
 .dropdown-toggle.active {
-  transform: rotate(180deg); /* Rotate the arrow when open */
+  transform: rotate(360deg);
+  color: white;
+  text-shadow: 10px 5px 10px gold;
 }
 
 /* ========== Language Switch ========== */
