--- a/css/kid.css
+++ b/css/kid.css
@@ -51,11 +51,10 @@ ul {
 /* CSS Variables */
 :root {
   --main-color: #ffd700;
-  --transparent-color: rgba(255, 217, 0, 0.075);
+  --transparent-color: rgba(0, 0, 0, 0.842);
   --section-padding: 100px;
   --text-shadow: 5px 5px 5px rgba(255, 215, 0, 0.7);
 }
-
 /* Navbar Links */
 .nav-links a {
   text-decoration: none;
@@ -84,7 +83,7 @@ ul {
   top: 100%;
   left: 50%;
   transform: translateX(-50%);
-  background: rgba(0, 0, 0, 0.658);
+  background: var(--transparent-color);
   list-style: none;
   padding: 10px;
   margin: 0;
@@ -179,7 +178,7 @@ p {
 /* Hero section */
 .hero-section {
   position: relative;
-  background: url("../image/اطفال.jpg") no-repeat center center/cover;
+  background: url("../image/bac.jpg") no-repeat center center/cover;
   height: 100vh;
   display: flex;
   align-items: center;
@@ -229,7 +228,7 @@ p {
 
 .hero-overlay {
   background: rgba(0, 0, 0, 0.4);
-  padding: 0;
+  padding: 20px;
   border-radius: 10px;
   position: relative;
 }
@@ -594,12 +593,6 @@ footer .active {
 @media (max-width: 767px) {
   .landing {
     height: 40vh;
-  }
-  .hero-section {
-    height: 40vh;
-  }
-  .section {
-    flex-direction: column-reverse;
   }
   .section img {
     width: 100% !important;
