--- a/css/Tour.css
+++ b/css/Tour.css
@@ -528,9 +528,9 @@ footer .fa-solid {
   .nav-links.active {
     display: flex;
 
-    width: 50%; /* تعديل لتناسب الشاشة بشكل أفضل */
-    left: 78%;
-    transform: translateX(-50%); /* لتوسيط القائمة النشطة */
+    width: 60%;
+    left: 68%;
+    transform: translateX(-50%);
   }
   .toggle-menu {
     display: block;
