--- a/css/great.css
+++ b/css/great.css
@@ -591,9 +591,10 @@ footer .footer-developed {
   }
   .nav-links.active {
     display: flex;
-    width: 50%; /* تعديل لتناسب الشاشة بشكل أفضل */
-    left: 78%;
-    transform: translateX(-50%); /* لتوسيط القائمة النشطة */
+
+    width: 60%;
+    left: 68%;
+    transform: translateX(-50%);
   }
   .toggle-menu {
     display: block;
