--- a/css/great.css
+++ b/css/great.css
@@ -249,6 +249,7 @@ header {
 }
 
 .hero-overlay h1 {
+  text-align: center;
   font-size: 3rem;
   font-weight: bold;
 }
@@ -291,7 +292,7 @@ header {
   background-color: rgba(0, 0, 0, 0.658);
 }
 .king-section {
-  width: 400px;
+  width: 100%;
   height: 400px;
   position: relative;
   background-color: rgba(255, 255, 255, 0.178);
